Added kramden-desktop subproject

--- a/live-build/auto/config
+++ b/live-build/auto/config
@@ -798,6 +798,51 @@ case $PROJECT in
 						;;
 				esac
 				;;
+			kramden-desktop)
+				HAS_MINIMAL=yes
+				MINIMAL_DESC="A minimal but usable Ubuntu Desktop."
+				MINIMAL_IS_DEFAULT=yes
+				HAS_DEFAULT_LANGUAGES=yes
+				LANGUAGE_BASE=desktop
+				KERNEL_FLAVOURS='generic-hwe-24.04'
+				COMPONENTS='main restricted universe multiverse'
+				touch config/universe-enabled
+				do_layered_desktop_image
+
+				# Enchanced secureboot stuff
+				case "$ARCH" in
+				    amd64)
+					# the enhanced-secureboot layer, contains all packages for the enhanced secureboot install
+					add_package minimal.enhanced-secureboot cryptsetup boot-managed-by-snapd
+					add_package minimal.standard.enhanced-secureboot cryptsetup boot-managed-by-snapd
+					# We only need english
+					#derive_language_layers minimal.enhanced-secureboot desktop-minimal desktop-default-languages "$seeded_langs"
+					#derive_language_layers minimal.standard.enhanced-secureboot desktop desktop-default-languages "$seeded_langs"
+					cat <<-EOF > config/minimal.enhanced-secureboot.catalog-in.yaml
+						id: ubuntu-desktop-minimal
+						variations:
+						  minimal:
+						    path: minimal.squashfs
+						  minimal-enhanced-secureboot:
+						    path: minimal.enhanced-secureboot.squashfs
+						    snapd_system_label: enhanced-secureboot-desktop
+					EOF
+					cat <<-EOF > config/minimal.standard.enhanced-secureboot.catalog-in.yaml
+						id: ubuntu-desktop
+						variations:
+						  standard:
+						    path: minimal.standard.squashfs
+						  enhanced-secureboot:
+						    path: minimal.standard.enhanced-secureboot.squashfs
+						    snapd_system_label: enhanced-secureboot-desktop
+					EOF
+					;;
+				esac
+				add_package minimal.standard kramden-desktop
+				add_snap minimal.standard core22 snapd firefox firmware-updater gnome-42-2204 bare gtk-common-themes snap-store snapd-desktop-integration gnome-2048 gnome-chess gnome-dictionary gnome-nibbles frogsquash gnome-weather iagno mc-installer quadrapassel
+				#add_snap minimal.standard core22 snapd firefox firmware-updater gnome-42-2204 bare gtk-common-themes snap-store snapd-desktop-integration core18 core20 gnome-3-38-2004 gnome-2048 gnome-chess gnome-dictionary gnome-nibbles frogsquash gnome-weather iagno mc-installer quadrapassel spotify vlc zoom-client
+
+				;;
 			*)
 				HAS_MINIMAL=yes
 				MINIMAL_DESC="A minimal but usable Ubuntu Desktop."
